2024-03-05  Oliver Kiddle  <opk@zsh.org>

	* 52641: midchildan: Doc/Zsh/contrib.yo, Functions/Zle/incarg,
	Test/X05zleincarg.ztst: add a backward variant and make it repeatable

2024-03-02  Bart Schaefer  <schaefer@zsh.org>

	* 52652: Src/params.c, Test/D04parameter.ztst: fix obscure bug
	unsetting the array part of a tied parameter pair, update test

	* JunT.: 52635: Test/runtests.zsh: show file name when crashed

	* 52612: Src/parse.c, Src/subst.c, Src/utils.c: change the %l
	replacment of zwarning() et al. to do literal string output;
	change previous uses to %s and use new %l for ${var?$error}

2024-03-01  Bart Schaefer  <schaefer@zsh.org>

	* 52645: Src/builtin.c: unset through a nameref keep up-scope
	parameters declared, and not wipe out the entire parameter stack

2024-02-28  Bart Schaefer  <schaefer@zsh.org>

	* 52619 (plus tests): Src/params.c, Test/A06assign.ztst: there
	is no empty element when appending array to unset scalar

2024-02-28  Oliver Kiddle  <opk@zsh.org>

	* 52622 (tweaked, c.f. 52626): Src/jobs.c: adjust number of columns
	and drop right-parenthesis in "kill -L" output

	* 52623: Src/signames2.awk: add some Solaris signal descriptions

2024-02-28  Oliver Kiddle  <opk@zsh.org>

	* 52594: Completion/Zsh/Command/_kill, Doc/Zsh/builtins.yo,
	Doc/Zsh/params.yo, Src/Modules/parameter.c, Src/builtin.c,
	Src/exec.c, Src/hashtable.c, Src/init.c, Src/jobs.c, Src/params.c,
	Src/signals.c, Src/signals.h, Src/signames2.awk: support for
	POSIX real-time signals with kill and trap and add -L option to
	kill for more verbose listing of signals

2024-02-24  Bart Schaefer  <schaefer@zsh.org>

	* 52597: Src/math.c: fix multibyte and metafied character counts
	when providing context for operator and operand errors

	* 52596: Src/exec.c: metafy interpreter name for error message

	* Stephane: 52591: Src/builtin.c: printf builtin must pass
	metafied strings to math evaluation

2024-02-23  Bart Schaefer  <schaefer@zsh.org>
